--- a/app/src/main/res/layout/activity_add_info.xml
+++ b/app/src/main/res/layout/activity_add_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,150 +9,83 @@
     tools:context=".Add_info">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Details"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:textColor="#334097">
 
-        </TextView>
+        <EditText
+            android:id="@+id/profileFullName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:ems="10"
+            android:hint="Your Name"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profileImageView" />
 
         <ImageView
-        android:id="@+id/profileImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        app:srcCompat="@mipmap/ic_launcher" />
+            android:id="@+id/profileImageView"
+            android:layout_width="131dp"
+            android:layout_height="143dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_person_add_24" />
 
+        <EditText
+            android:id="@+id/profileEmailAddress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:ems="10"
+            android:hint="Your Email Address"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profileFullName" />
+
+        <EditText
+            android:id="@+id/profilePhoneNo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:ems="10"
+            android:inputType="phone"
+            android:hint="Phone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profileEmailAddress" />
 
 
         <EditText
-            android:id="@+id/person_name"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:hint="Name"
-            android:paddingLeft="10dp"
-            android:textColor="#000000">
-
-        </EditText>
-
-        <EditText
-            android:id="@+id/person_birth"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:background="#ffffff"
-            android:hint="dd/mm/yyyy"
-            android:paddingLeft="10dp"
-            android:textColor="#000000">
-
-        </EditText>
-
-        <EditText
-            android:id="@+id/person_address"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:background="#ffffff"
-            android:hint="Address"
-            android:paddingLeft="10dp"
-            android:textColor="#101010">
-
-        </EditText>
-
-
-        <EditText
-            android:id="@+id/person_email"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:background="#ffffff"
-            android:hint="Email id"
-            android:paddingLeft="10dp"
-            android:textColor="#000000">
-
-        </EditText>
-
-        <EditText
-            android:id="@+id/person_mobile"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:background="#ffffff"
-            android:hint="Mobile number"
-            android:paddingLeft="10dp"
-            android:textColor="#000000">
-
-        </EditText>
-
-        <EditText
-            android:id="@+id/person_qualification"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:background="#ffffff"
-            android:hint="Qualification details"
-            android:paddingLeft="10dp"
-            android:textColor="#000000">
-
-        </EditText>
-
-        <EditText
-            android:id="@+id/person_school"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:background="#ffffff"
-            android:hint="School / college name"
-            android:paddingLeft="10dp"
-            android:textColor="#000000">
-
-        </EditText>
-
-
+            android:id="@+id/profileOccupation"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:ems="10"
+            android:hint="Occupation details"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profilePhoneNo" />
         <Button
-            android:id="@+id/add_button"
+            android:id="@+id/saveProfileInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="140dp"
-            android:background="@color/colorPrimaryDark"
-            android:drawableStart="@drawable/ic_baseline_person_add_24"
-            android:drawableLeft="@drawable/ic_baseline_person_add_24"
-            android:drawablePadding="10dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:text="Add "
-            android:textColor="#ffffff"
-            android:textStyle="bold">
-
-        </Button>
+            android:layout_marginBottom="16dp"
+            android:text="Save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
