--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:text="Personal Information System"
         android:textAlignment="center"
         android:textColor="#FFFCFC"
+        android:textStyle="bold"
         android:textSize="25sp" />
 
     <EditText
@@ -48,12 +49,28 @@
         android:textColor="#0E0E0E" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/forgotPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Forgot Password?"
+        android:textAlignment="center"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textregister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50sp"
         android:text="Create new account"
         android:textAlignment="center"
         android:textColor="#000000" />
+
+    <ProgressBar
+        android:id="@+id/progressBarLogin"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:visibility="invisible" />
 
 </LinearLayout>
