--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -64,6 +64,15 @@
         android:ems="10"
         android:hint="Enter Mobile number"
         android:inputType="phone" />
+    <EditText
+        android:id="@+id/eTROccupation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30sp"
+        android:ems="10"
+        android:hint="Occupation and Details"
+
+        />
 
     <Button
         android:id="@+id/buttonRegister"
@@ -82,6 +91,14 @@
         android:text="Already have an account"
         android:textAlignment="center"
         android:textColor="#0E0E0E" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
+
 
 
 </LinearLayout>
