--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -107,6 +107,22 @@
         app:layout_constraintTop_toBottomOf="@+id/verifyMsg" />
 
     <Button
+        android:id="@+id/nextpage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="250dp"
+        android:layout_marginEnd="8dp"
+        android:text="next page"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextOccupation"
+        app:layout_constraintVertical_bias="0.111" />
+
+
+
+
+    <Button
         android:id="@+id/resetPasswordLocal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -195,6 +211,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profilePhone"
         app:layout_constraintVertical_bias="0.59000003" />
+
 
     <ImageView
         android:id="@+id/imageView"
