--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -32,10 +32,11 @@
         android:id="@+id/eTPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80sp"
         android:layout_marginHorizontal="30sp"
+        android:layout_marginTop="80sp"
         android:ems="10"
         android:hint="Enter your Fulllname"
+        android:textColorHint="#F5F4F8"
         android:inputType="textPersonName" />
 
     <EditText
@@ -45,6 +46,7 @@
         android:layout_marginHorizontal="30sp"
         android:ems="10"
         android:hint="Enter Email"
+        android:textColorHint="#F5F4F8"
         android:inputType="textEmailAddress" />
 
     <EditText
@@ -54,6 +56,7 @@
         android:layout_marginHorizontal="30sp"
         android:ems="10"
         android:hint="Enter Password"
+        android:textColorHint="#F5F4F8"
         android:inputType="textPassword" />
 
     <EditText
@@ -63,6 +66,7 @@
         android:layout_marginHorizontal="30sp"
         android:ems="10"
         android:hint="Enter Mobile number"
+        android:textColorHint="#F5F4F8"
         android:inputType="phone" />
     <EditText
         android:id="@+id/eTROccupation"
@@ -71,6 +75,7 @@
         android:layout_marginHorizontal="30sp"
         android:ems="10"
         android:hint="Occupation and Details"
+        android:textColorHint="#F5F4F8"
 
         />
 
@@ -90,7 +95,7 @@
         android:layout_height="wrap_content"
         android:text="Already have an account"
         android:textAlignment="center"
-        android:textColor="#0E0E0E" />
+        android:textColor="#000000" />
 
     <ProgressBar
         android:id="@+id/progressBar"
