--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -25,7 +25,7 @@
            app:layout_constraintTop_toTopOf="parent" />
 
        <EditText
-           android:id="@+id/edit_txt_name"
+           android:id="@+id/edit_txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
