--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -52,6 +52,7 @@
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
+           android:visibility="gone"
            tools:listitem="@layout/note_item" />
 
 
