--- a/app/src/main/res/layout/activity_add_info.xml
+++ b/app/src/main/res/layout/activity_add_info.xml
@@ -9,23 +9,24 @@
     tools:context=".Add_info">
 
 
-
         <EditText
             android:id="@+id/profileFullName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="108dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:hint="Your Name"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profileImageView" />
 
         <ImageView
             android:id="@+id/profileImageView"
+            android:src="@drawable/profile"
             android:layout_width="131dp"
             android:layout_height="143dp"
             android:layout_marginTop="24dp"
@@ -48,20 +49,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profileFullName" />
 
-        <EditText
+
+        <TextView
             android:id="@+id/profilePhoneNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="24dp"
             android:ems="10"
-            android:inputType="phone"
-            android:hint="Phone"
+            android:textColor="#000000"
+            android:textSize="15dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileEmailAddress" />
-
+            app:layout_constraintTop_toBottomOf="@+id/profileOccupation" />
 
         <EditText
             android:id="@+id/profileOccupation"
@@ -75,13 +77,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profilePhoneNo" />
+            app:layout_constraintTop_toBottomOf="@+id/profileEmailAddress" />
         <Button
             android:id="@+id/saveProfileInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:text="Save"
+            android:background="@drawable/buttonlogin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
