--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bglgn"
+    android:background="@drawable/lgv1"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -12,21 +12,30 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120sp"
+        android:layout_marginTop="140sp"
         android:text="Personal Information System"
         android:textAlignment="center"
-        android:textColor="#FFFCFC"
-        android:textStyle="bold"
-        android:textSize="25sp" />
+        android:textColor="#D6BB93"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:textAlignment="center"
+        android:textColor="#EAE6C3"
+        android:textSize="12sp" />
 
     <EditText
         android:id="@+id/eTLtEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120sp"
+        android:layout_marginTop="150sp"
         android:layout_marginHorizontal="30sp"
         android:ems="10"
         android:hint="Enter Email"
+        android:textColor="#FFFFFF"
         android:textColorHint="#F5F4F8"
         android:inputType="textEmailAddress" />
 
@@ -37,6 +46,7 @@
         android:layout_margin="30sp"
         android:ems="10"
         android:hint="Enter Password"
+        android:textColor="#FFFFFF"
         android:textColorHint="#F5F4F8"
         android:inputType="textPassword" />
 
@@ -48,7 +58,7 @@
         android:background="@drawable/buttonlogin"
         android:backgroundTintMode="add"
         android:text="LOGIN"
-        android:textColor="#0E0E0E" />
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/forgotPassword"
@@ -56,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Forgot Password?"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textAlignment="center"
         tools:visibility="visible" />
 
@@ -67,7 +77,7 @@
         android:layout_marginTop="50sp"
         android:text="Create new account"
         android:textAlignment="center"
-        android:textColor="#000000" />
+        android:textColor="#FFFFFF" />
 
     <ProgressBar
         android:id="@+id/progressBarLogin"
